# imessage-history

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  contacts.example.csv  imessage_export.py  pyproject.toml  sample_output_schema.md
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-06-06-export-formatting.md  2026-06-06-redaction.md  2026-06-06-tui-makeover.md  2026-06-07-tui-color-themes.md  2026-06-07-tui-navigation.md  2026-06-07-tui-phase2.md  2026-06-08-history-selection-nav-refactor.md  2026-06-09-tui-viewport-only-nav.md
imessage_export/: __init__.py  __main__.py  cli.py  contacts.py  contacts_macos.py  db.py  decoder.py  export.py  models.py  redactor.py  timestamps.py  window.py  writers.py
imessage_export/tui/: __init__.py  defaults.py  errors.py  preview.py  tables.py  theme.py  wizard.py
tests/: test_app_navigation.py  test_app_smoke.py  test_app_state.py  test_app_workers.py  test_cli_tty_detect.py  test_contacts_macos.py  test_decoder.py  test_end_to_end.py  test_errors.py  test_formatting.py  test_history_render.py  test_history_view_cursor.py  test_history_view_lazy_load.py  test_history_view_perf.py  test_history_view_range_marks.py  test_history_view_scroll.py  test_no_rich_import_on_headless.py  test_redactor.py  test_theme.py  test_time_12h.py  test_tui_defaults.py  test_window_strip.py  test_wizard_resolve_names.py
tests/fixtures/: build_sample_db.py
(+16 files in other folders)
